# Anenji_smartess

./: README.md
shinemonitor-pwa/: BUILD_SUMMARY.txt  DEPLOYMENT.md  FILE_MANIFEST.txt  QUICKSTART.md  README.md  index.html  manifest.json  sw.js
shinemonitor-pwa/css/: app.css
shinemonitor-pwa/js/: api.js  app.js  charts.js  dashboard.js  devices.js  settings.js  utils.js
shinemonitor-python/: INDEX.md  LIBRARY_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  setup.py
shinemonitor-python/examples/: basic_usage.py
shinemonitor-python/shinemonitor/: __init__.py  auth.py  client.py  const.py  exceptions.py  models.py
